--- a/django/derrick/requirements.txt
+++ b/django/derrick/requirements.txt
@@ -1,7 +1,7 @@
-django-cors-headers=3.0.2
 amqp==1.4.9
 anyjson==0.3.3
 asgiref==3.2.7
+autopep8==1.5.6
 beautifulsoup4==4.9.1
 billiard==3.3.0.23
 bs4==0.0.1
@@ -12,19 +12,27 @@ cycler==0.10.0
 Django==3.0.6
 django-background-tasks==1.2.5
 django-compat==1.0.15
+django-cors-headers==3.7.0
 django-crontab==0.7.1
+django-debug-toolbar==3.2
 django-elasticsearch-dsl==7.1.1
+django-silk==4.1.0
 djangorestframework==3.11.0
 elasticsearch==7.7.1
 elasticsearch-dsl==7.2.1
+gprof2dot==2021.2.21
 gunicorn==20.0.4
 idna==2.9
+Jinja2==2.11.3
 kiwisolver==1.2.0
 kombu==3.0.37
+MarkupSafe==1.1.1
 matplotlib==3.2.2
 numpy==1.19.0
 Pillow==7.1.2
 psycopg2-binary==2.8.5
+pycodestyle==2.7.0
+Pygments==2.8.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
@@ -33,5 +41,6 @@ requests==2.23.0
 six==1.15.0
 soupsieve==2.0.1
 sqlparse==0.3.1
+toml==0.10.2
 urllib3==1.25.9
 wordcloud==1.7.0
